<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_hw_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serial_port_hw_select_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/port_cfg_title_color" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_usb_dev"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/usb_dev_selection"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_usb_dev"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:id="@+id/textView_interface"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/interface_selection"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_interface"
            android:layout_column="1"
            android:layout_row="1" />
    </GridLayout>

    <TextView
        android:id="@+id/textView_port_cfg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serial_port_cfg_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/port_cfg_title_color" />

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5_baud_rate"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/baud_rate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_baud_rate"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:id="@+id/textView_data_bits"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/data_bits"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_data_bits"
            android:layout_column="1"
            android:layout_row="1" />
        
        <TextView
            android:id="@+id/textView_stop_bits"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/stop_bits"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_stop_bits"
            android:layout_column="1"
            android:layout_row="2" />
        
        <TextView
            android:id="@+id/textView_parity"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/parity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_parity"
            android:layout_column="1"
            android:layout_row="3" />
        
        <TextView
            android:id="@+id/textView_flow_ctrl"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/flow_ctrl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_flow_ctrl"
            android:layout_column="1"
            android:layout_row="4" />
    </GridLayout>

</LinearLayout>